CLASSES-2469 fix blogwow editor width on mobile and rework tool tabs so spaces between elements doesn't affect margins

--- a/blogwow/tool/src/webapp/css/BlogWow.css
+++ b/blogwow/tool/src/webapp/css/BlogWow.css
@@ -101,7 +101,7 @@ th.header {
   margin-bottom: 0.6em;
 }
 .blogwowEditorSmall {
-  width: 50em;
+  width: 100%;
 }
 .blogwowCommentContainer {
   width:100%;
